--- a/task1.html
+++ b/task1.html
@@ -10,7 +10,7 @@
     <h1>Обо мне</h1>
 
     <img src="j.jpg" height="100ps">
-     <h5> Доброго времени суток! Меня зовут Юлия, и я начмнающий веб-разработчик!</h5>
+     <h5> Доброго времени суток! Меня зовут Юлия, и я начинающий веб-разработчик!</h5>
        
         <p> Недавно начала изучать HTML, и уже создаю свои первые сайты. А в перерывах подрабатываю бухгалтером. </p>
 
